fix: adjust HTML Line-Wrapping according to rule 2.5

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* Basic Style */
 body {
     background-color: #f8f8f8;
-    color: #333;
+    color: #000;
     font-family: Lato, sans-serif;
 }
 
